# habit-tracker

./: .gitignore  pyproject.toml
alembic/: env.py
src/: database.py  enums.py  main.py
src/api/v1/routers/: auth_router.py  habit_router.py
src/core/: config.py  dependencies.py  logging.py
src/core/exceptions/: auth.py  handler.py  http.py
src/core/utils/: security.py
src/ml/: model_service.py  nn_model.py  predict.py  train.py
src/ml/data/: generate_data.py  habits_data.csv
src/ml/models/: habit_predictor_model.py
src/ml/models/trained/: predict_model_weights.pth
src/models/: habit.py  user.py
src/repositories/: habit_repo.py  user_repo.py
src/schemas/: auth.py  habit.py  user.py
